--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --background-color : #060644;
+    --background-color : #01011b;
     --light-color : #e5e8f5;
-    --border-shadow : 3px 10px 16px 0px rgba(15,58,228,0.75);
+    --border-shadow : 3px 6px 26px 2px rgba(23, 48, 150, 0.75);
     --card-padding: 10px;
 }
 body {
@@ -9,7 +9,7 @@ body {
     padding: 0;
     color: var(--light-color);
     background: var(--background-color);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:  Arial, Helvetica, sans-serif
 }
 .container {
     display: block;
@@ -20,8 +20,8 @@ body {
     max-height: auto;
 }
 .container h1 {
-    font-size: 3rem;
-    font-weight: 900;
+    font-size: 2.7rem;
+    font-weight: 700;
 }
 
 .container .userInputContainer {
@@ -49,7 +49,7 @@ body {
     justify-content: space-evenly;
     margin-bottom: 20px;
 }
-.container .userInputContainer .input-form #submit-btn {
+.container .userInputContainer .input-form #check-btn {
     cursor: pointer;
     border-radius: 15px;
     padding: 10px 20px;
@@ -58,25 +58,42 @@ body {
     font-size: 15px;
     font-weight: 600;
     text-align: center;
+    margin-top: 20px;
 }
-
+.container .userInputContainer .input-form #check-btn:hover {
+    background-color: goldenrod;
+    color: black;
+    transition: 3ms ease-in;
+}
 .answer{
     /* margin-left: 20px; */
     /* text-align: center; */
     display: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 
 }
 
 .container .tip {
     margin-top: 40px;
-    max-width: 450px;
+    /* max-width: 450px;
     font-size: 27px;
     background: rgb(12, 42, 25);
     padding: 25px;
     border-radius: 20px;
-    box-shadow: var(--border-shadow);
+    box-shadow: var(--border-shadow); */
+}
+.container .tip  p {
+    font-size: 20px;
+    font-weight: 100;
 }
 .container .tip span {
     color: gold;
-    font-size: 40px;
+    font-size: 35px;
+}
+.warning {
+    display: none;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
